<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:scaleType="centerCrop"
            android:src="@drawable/main_img" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background=" @drawable/rounded_corner"
                android:onClick="galleryMethod">

                <ImageView
                    android:id="@+id/image_gallery"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icons8_picture_64" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/image_gallery"
                    android:gravity="center_vertical"
                    android:paddingLeft="4dp"
                    android:text="@string/gallery"
                    android:textColor="#000000"
                    android:textSize="24sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:onClick="facultyMethod">

                <ImageView
                    android:id="@+id/image_faculty"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icons8_training_64" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_toRightOf="@id/image_faculty"
                    android:gravity="center_vertical"
                    android:paddingLeft="4dp"
                    android:text="@string/faculty"
                    android:textColor="#000000"
                    android:textSize="24sp" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:onClick="coursesMethod">

                <ImageView
                    android:id="@+id/image_courses"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icons8_pass_fail_64" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/image_courses"
                    android:gravity="center_vertical"
                    android:paddingLeft="4dp"
                    android:text="@string/courses"
                    android:textColor="#000000"
                    android:textSize="24sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:onClick="facilitiesMethod">

                <ImageView
                    android:id="@+id/image_facilities"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icons8_playground_64" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/image_facilities"
                    android:gravity="center_vertical"
                    android:paddingLeft="4dp"
                    android:text="@string/facilities"
                    android:textColor="#000000"
                    android:textSize="24sp" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adMainTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-6844568931343897/5811172683"></com.google.android.gms.ads.AdView>

    <!--    <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="Placed Student"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="#000000"
            android:background="#999999"
            android:onClick="pstudentMethod"/>
    -->
</RelativeLayout>
